Fix the gap issue in the Features section
Now the whole section doesn't grow too big if you zoom out.
The items wrap nicely when you zoom in and the gap isn't too
big.

--- a/styles.css
+++ b/styles.css
@@ -181,12 +181,13 @@ h2.main {
 
 .features .container {
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: baseline;
     text-align: center;
-    gap: 100px;
+    gap: 30px;
     flex-wrap: wrap;
-    padding: 0px var(--section-padding);
+    width: 70%;
+    max-width: 1000px;
 }
 
 .features .item {
